Fix overflow

--- a/web/src/components/Modal.scss
+++ b/web/src/components/Modal.scss
@@ -50,6 +50,7 @@
 
       & > .items {
         flex-grow: 1;
+        overflow-y: auto;
 
         & > .item {
           padding: 12px;
